--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
+    <script src="//widget.mixcloud.com/media/js/widgetApi.js" type="text/javascript"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400&display=swap" rel="stylesheet">
-
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Work+Sans:wght@100;300;400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa&family=Urbanist:wght@500&display=swap" rel="stylesheet">
 
     <link media="all" rel="icon" href="favicon.ico"/>
     <link rel="stylesheet" media="all" href="/css/style.min.css"/>
@@ -39,6 +38,6 @@
   </body>
 
   <script type="module" src="/js/app.js"></script>
-  <script src="https://embed.radio.co/embed/s3ad39def4/status.js"></script>
+
 
 </html>
