--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta property="og:title" content="Pattern Radio - Online Music Broadcasting">
     <meta property="og:description"
     content="Streamed music from across the spectrum curated for enlightened listening. Live mixes, selections and soundtracks for you to enjoy and share.">
-    <meta property="og:image" content="http://www.patternradio.net/images/misc/patternradiosocial.jpg">
+    <meta property="og:image" content="https://www.patternradio.net/images/misc/patternradiosocial.jpg">
     <meta property="og:image:width" content="340">
     <meta property="og:image:height" content="340">
-    <meta property="og:url" content="http://www.patternradio.net">
+    <meta property="og:url" content="https://www.patternradio.net">
     <meta property="og:type" content="music.radio_station">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
