add live page for twitch stream embed

--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
 
     <link media="all" rel="icon" href="favicon.ico"/>
     <link rel="stylesheet" media="all" href="/css/style.min.css"/>
+
+        <!-- Load the Twitch embed JavaScript file -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+
   </head>
 
-  <body data-controller="radio">
+  <body data-controller="radio navigation">
     <div id="spa-content-container" class="spa-content-container"></div>
 
     <div class="player-footer">
